feat(pwa): add apple-touch-icon, iOS meta tags and README instructions for Add to Home Screen

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#667eea">
+    <!-- iOS / Safari PWA meta -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="AmorFati">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="Évaluation personnelle Amor Fati - Suivi de ton évolution philosophique">
     <link rel="manifest" href="/manifest.json">
     <title>Amor Fati Tracker - Suivi Personnel</title>
