--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
     <meta name="mobile-web-app-capable" content="yes">
+    <!-- iOS splash screens -->
+    <link rel="apple-touch-startup-image" href="/icons/splash-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="/icons/splash-750x1334.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="/icons/splash-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="/icons/splash-1242x2208.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="/icons/splash-1536x2048.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <meta name="description" content="Évaluation personnelle Amor Fati - Suivi de ton évolution philosophique">
     <link rel="manifest" href="/manifest.json">
     <title>Amor Fati Tracker - Suivi Personnel</title>
